# gmsv_mongodb

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
docs/: Building.md  Client.md  Collection.md  README.md
examples/: bulk.lua  update.lua
src/: Bulk.cpp  Bulk.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Collection.cpp  Collection.hpp  Database.cpp  Database.hpp  Macros.hpp  MongoDB.cpp  MongoDB.hpp  ObjectID.cpp  ObjectID.hpp  Util.cpp  Util.hpp
